syntax = "proto3";
option go_package = "pb/dm";
import "google/protobuf/wrappers.proto";

package dm;

service Dm {
  //设备登录认证
  rpc loginAuth(LoginAuthReq)           returns (Response);
  //设备操作认证
  rpc accessAuth(AccessAuthReq)         returns (Response);
  //鉴定是否是root账号
  rpc rootCheck(RootCheckReq)           returns (Response);
  //设备管理
  rpc manageDevice(ManageDeviceReq)     returns (DeviceInfo);
  //产品管理
  rpc manageProduct(ManageProductReq)   returns (ProductInfo);
  //获取产品信息
  rpc getProductInfo(GetProductInfoReq) returns (GetProductInfoResp);
  //产品模板管理
  rpc manageProductTemplate(ManageProductTemplateReq)   returns (ProductTemplate);
  //获取产品信息
  rpc getProductTemplate(GetProductTemplateReq) returns (ProductTemplate);
  //获取设备信息
  rpc getDeviceInfo(GetDeviceInfoReq)   returns (GetDeviceInfoResp);
  //管理产品的固件
  rpc manageFirmware(ManageFirmwareReq)   returns (FirmwareInfo);
  //获取产品固件信息
  rpc GetFirmwareInfo(GetFirmwareInfoReq) returns (GetFirmwareInfoResp);
  //获取设备调试信息记录登入登出,操作
  rpc getDeviceDescribeLog(GetDeviceDescribeLogReq)   returns (GetDeviceDescribeLogResp);
  //获取设备数据信息
  rpc getDeviceData(GetDeviceDataReq)     returns (GetDeviceDataResp);
  //同步调用设备行为
  rpc sendAction(SendActionReq)         returns(SendActionResp);
  //同步调用设备属性
  rpc sendProperty(SendPropertyReq)     returns(SendPropertyResp);
  //获取设备sdk调试日志
  rpc getDeviceSDKLog(GetDeviceSDKLogReq) returns (GetDeviceSDKLogResp);
}


message PageInfo{
  int64 page = 1;
  int64 pageSize = 2;
}

message Response {
}
message ManResp {
  int64 ID = 1;
}
//enum OPT//操作类型
//{
//  ADD     = 0;  //增加
//  MODIFY  = 1;  //修改
//  DEL     = 2;  //删除
//}


/*
下面是设备管理模块的消息
*/
message LoginAuthReq {
  string username = 1;//用户名
  string password = 2;//密码
  string clientID = 3;//clientID
  string ip = 4;//访问的ip地址
  bytes certificate = 5;//客户端证书
}

message AccessAuthReq {
  string username = 1; //用户名
  string topic = 2;//主题
  string clientID = 3;//clientID
  string access = 4;//操作
  string ip = 5; //访问的ip地址
}

message RootCheckReq{
  string username = 1;//用户名
  string password = 2;//密码
  string clientID = 3;//clientID
  string ip = 4;//访问的ip地址
  bytes certificate = 5;//客户端证书
}


//enum AUTH//认证方式
//{
//  AUTH_UNKNOWN = 0; //禁止为此参数
//  PWD   = 1;  //账密认证
//  CERT  = 2;  //证书认证
//}
//enum NET//网络类型
//{
//  NET_UNKNOWN  = 0; //禁止为此参数
//  OTHER   = 1;  //其他
//  WIFI    = 2;  //wi-fi
//  G234    = 3;  //2G/3G/4G
//  G5      = 4;  //5G
//  BLE     = 5;  //蓝牙
//  LORA    = 6;  //LoRaWAN
//}
//
//enum DEV//设备类型
//{
//  DEV_UNKNOWN  = 0; //禁止为此参数
//  DEVICE  = 1;  //设备
//  GATEWAY = 2;  //网关
//  SUBSET  = 3;  //子设备
//}
//enum DATA//数据协议
//{
//  DATA_UNKNOWN = 0; //禁止为此参数
//  CUSTOM  = 1;  //自定义
//  TEMPLATE = 2;  //数据模板
//}
//
//enum AUTO_REG//动态注册
//{
//  AUTO_REG_UNKNOWN = 0; //禁止为此参数
//  CLOSE = 1;  //关闭
//  OPEN  = 2;  //打开
//  AUTO  = 3;  //打开并自动创建设备
//}

message ManageFirmwareReq{
  int64 opt = 1;//操作 0:新增 1:修改 2:删除
  FirmwareInfo info = 2; //设备信息
}

message FirmwareInfo{
  string  productID = 1;//产品ID 只读
  string  version = 2;//固件版本 只读 产品下唯一
  string  name = 3;//固件名
  string  description = 4;//固件描述
  string  dir = 5;//固件标识,拿来下载文件 只读
  int64   size = 6;//固件大小 只读
}

message GetFirmwareInfoReq{
  string  productID = 1; //产品id 如果不传获取所有固件
  int64 version=2;//固件版本 如果不传,获取产品下或所有固件
  PageInfo page = 3;//分页信息 只获取一个则不填
}

message GetFirmwareInfoResp{
  repeated FirmwareInfo list = 1;//设备信息
  int64  total = 2;//总数(只有分页的时候会返回)
}

message ProductInfo{
  int64   createdTime = 1; //创建时间 只读
  string   productID = 2; //产品id 只读
  string  productName = 3; //产品名称
  int64   authMode = 4;//认证方式:1:账密认证,2:秘钥认证
  int64   deviceType = 5;//设备类型:1:设备,2:网关,3:子设备
  int64   categoryID = 6;//产品品类
  int64   netType = 7;//通讯方式:1:其他,2:wi-fi,3:2G/3G/4G,4:5G,5:BLE,6:LoRaWAN
  int64   dataProto = 8;//数据协议:1:自定义,2:数据模板
  int64   autoRegister = 9;//动态注册:1:关闭,2:打开,3:打开并自动创建设备
  string   secret = 10;//动态注册产品秘钥 只读
  google.protobuf.StringValue   description = 11;//描述
  google.protobuf.StringValue   devStatus = 12; // 产品状态
}


message ManageProductReq{
  int64 opt = 1;//操作 0:新增 1:修改 2:删除
  ProductInfo info = 2;//产品信息
}


message GetProductInfoReq{
  string productID = 1; //产品id  如果为空返回所有产品的信息
  PageInfo page = 2;//分页信息,只获取一个则不填
}

message GetProductInfoResp{
  repeated ProductInfo list = 1; //产品信息
  int64 total = 2;//拥有的总数(只有分页的时候会返回)
}

message ProductTemplate{
  int64   createdTime = 1; //创建时间 只读
  string   productID = 2; //产品id 只读
  string template = 3;//数据模板
}

//只能修改
message ManageProductTemplateReq{
  ProductTemplate info = 1;//产品信息
}

message GetProductTemplateReq{
  string productID = 1; //产品id  如果为空返回所有产品的信息
}


message DeviceInfo{
  string   productID = 1; //产品id 只读
  string  deviceName = 3; //设备名称 读写
  int64   createdTime = 4; //创建时间 只读
  string  secret = 5; //设备秘钥 只读
  int64   firstLogin = 6; //激活时间 只读
  int64   lastLogin = 7; //最后上线时间 只读
  int64   isOnline = 8; //在线状态 0离线1在线 只读
  google.protobuf.StringValue  version = 9; // 固件版本  读写
  int64  logLevel = 10; // 日志级别:1)关闭 2)错误 3)告警 4)信息 5)调试  读写
  string  cert = 11;// 设备证书  只读
}

message ManageDeviceReq{
  int64 opt = 1;//操作 0:新增 1:修改 2:删除
  DeviceInfo info = 2; //设备信息
}
message GetDeviceInfoReq{
  string  deviceName = 1; //设备名 为空时获取产品id下的所有设备信息
  string  productID = 2; //产品id
  PageInfo page = 3;//分页信息 只获取一个则不填
}

message GetDeviceInfoResp{
  repeated DeviceInfo list = 1;//设备信息
  int64  total = 2;//总数(只有分页的时候会返回)
}



/*
上面是设备管理模块的消息
*/

/*获取对应日志信息*/
message GetDeviceDataReq{
  string method = 1; //获取的类型   property 属性 event事件 action 请求
  string deviceName = 2; //设备名(必填)
  string productID = 3; //产品id (必填)
  string dataID = 4; //获取的具体标识符的数据 如果不指定则获取所有属性数据,一个属性一条,如果没有获取到的不会返回值
  int64 timeStart = 5;//获取时间的开始
  int64 timeEnd = 6;//时间的结束
  int64 limit = 7;//获取的长度
}

/*设备的日志数据*/
message DeviceData{
  int64 timestamp = 1;//发生时间戳
  string type = 2 ;//类型 事件类型: 信息:info  告警alert  故障:fault
  string dataID = 3;//属性id
  string getValue = 4;//获取到的值
  string sendValue = 5;//发送过去的参数(action限定)
}

/*获取对应日志信息*/
message GetDeviceDataResp{
  int64 total = 1; //总数
  repeated DeviceData list = 2;
}

/*设备的日志数据*/
message DeviceDescribeLog{
  int64 timestamp = 1;//发生时间戳
  string action = 2 ;//操作类型;显示相应的操作名称、API名称、服务的method
  string requestID = 3;//请求ID
  string tranceID = 4;//服务器端事务id
  string topic = 5;//主题
  string content = 6;//具体内容
  int64 resultType = 7;//请求结果状态
}

/*实时获取对应信息*/
message GetDeviceDescribeLogReq{
  string  productID = 1; //产品id
  string  deviceName = 2; //设备名
  int64   timeStart = 3;//获取时间的开始
  int64   timeEnd = 4;//时间的结束
  int64   limit = 5;//获取的长度
}
/*实时获取对应信息*/
message GetDeviceDescribeLogResp{
  repeated DeviceDescribeLog list = 1;
}

message SendActionReq{
  string  productID = 1; //产品id 获取产品id下的所有设备信息
  string  deviceName = 2; //设备名
  string actionId = 3;//产品数据模板中行为功能的标识符，由开发者自行根据设备的应用场景定义
  string inputParams = 4;//输入参数
}
message SendActionResp{
  string clientToken = 1;//调用id
  string outputParams = 2;//输出参数 注意：此字段可能返回 null，表示取不到有效值。
  string  status = 3;//返回状态
  int64   code = 4;//设备返回状态码
}

message SendPropertyReq{
  string  productID = 1; //产品id 获取产品id下的所有设备信息
  string  deviceName = 2; //设备名
  string data = 3;//属性数据, JSON格式字符串, 注意字段需要在物模型属性里定义
  int64  dataTimestamp = 4;//上报数据UNIX时间戳, 仅对Method:reported有效
  string method = 5;//请求类型 , 不填该参数或者 desired 表示下发属性给设备, reported 表示模拟设备上报属性
}
message SendPropertyResp{
  int64   code = 1;//设备返回状态码
  string  status = 2;//返回状态
  string clientToken = 3;//调用id
  string data = 4;//返回信息
}
/*获取sdk调试日志信息*/
message GetDeviceSDKLogReq {
  string  productID = 1; //产品id
  string  deviceName = 2; //设备名
  int64   timeStart = 3;//获取时间的开始
  int64   timeEnd = 4;//时间的结束
  int64   limit = 5;//获取的长度
  PageInfo page = 6;//分页信息 只获取一个则不填
}
/*sdk调试日志信息*/
message GetDeviceSDKLogResp {
  repeated DeviceSDKLog list = 1;
}
message DeviceSDKLog {
  int64 timestamp = 1;//发生时间戳
  int64 loglevel = 2 ;//操作类型;显示相应的操作名称、API名称、服务的method
  string content = 3;//具体内容
}